Reparé un bug avec le z-index du contenu

--- a/nav.css
+++ b/nav.css
@@ -17,7 +17,7 @@ li {
   height: 100%;
   position: relative;
   text-align: center;
-  z-index: -1;
+  z-index: 0;
   margin-left: 60px;
 }
 
